# opcua

./: .gitignore  README.md
client/: CMakeLists.txt  run.sh
client/cfg/: configuration.json
client/src/: client.c  client.cpp  getdata.cpp  getdata.h  intfjson.cpp  intfjson.h  intfopcua.cpp  intfopcua.h  opcua.c  opcua.h  open62541.c  open62541.h  timer.h
server/: CMakeLists.txt  run.sh
server/src/: server.c
